src/post/styles/PostItem.css
.post-survey {
  padding: 1rem;
  width: 100%;
}

.post-item__modal {
  top: 22px;
  width: 35rem;
}

.post-item__modal-content {
  padding: 0;
}

.post-item__modal-actions {
  text-align: right;
}

.post-item__actions button,
.post-item__actions a {
  margin: 0.5rem;
}

.post-top-view-btn {
  display: flex;
  justify-content: space-between;
  border: 0;
  padding: 10px;
}

.post-view {
  width: 100%;
  border-top: 2px solid #000;
}

.post-title {
  padding: 20px 15px;
  border-bottom: 1px dashed #ddd;
  font-size: 2rem;
}

.post-info {
  display: flex;
  justify-content: space-around;
  padding: 15px;
  border-bottom: 1px solid #999;
  font-size: 0.9rem;
}

.post-content {
  padding: 15px;
  border-bottom: 1px solid #000;
  line-height: 160%;
  min-height: 20rem;
}

.post-btn-wrap {
  display: flex;
  justify-content: center;
  margin-top: 30px;
  border: 0;
  padding: 10px;
}

